2002-01-06  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists) [WIN32_NATIVE]: fixed a bug
	introduced on 2001-08-29 (mind tolerantp!)

2002-01-06  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (note-function-used, c-report-problems): report
	the replacements for the deprecated functions
	* deprecated.lisp (deprecate): new function - use throughout

2002-01-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (RM) [win32]: prepend '-'
	* ffcall/Makefile.msvc: prepend '-' before 'del'
	* ffcall/avcall/Makefile.msvc: ditto
	* ffcall/callback/Makefile.msvc: ditto
	* ffcall/callback/trampoline_r/Makefile.msvc: ditto
	* ffcall/callback/vacall_r/Makefile.msvc: ditto
	* ffcall/trampoline/Makefile.msvc: ditto
	* ffcall/vacall/Makefile.msvc: ditto
	* libiconv/Makefile.msvc: ditto
	* libiconv/lib/Makefile.msvc: ditto
	* libiconv/libcharset/Makefile.msvc: ditto
	* libiconv/libcharset/lib/Makefile.msvc: ditto
	* libiconv/src/Makefile.msvc: ditto
	* libiconv/tests/Makefile.msvc: ditto
	* sigsegv/Makefile.msvc: ditto
	From Indrayana Rustandi <i_rustandi@yahoo.com>

2002-01-06  Sam Steingold  <sds@gnu.org>

	FDEFINITION returns correctly for (SETF symbol) macros
	* control.d (FDEFINITION): check SYS::SETF-EXPANDER property too
	* constsym.d (SYS::SETF-EXPANDER): define the symbol here
	Reported by William Harold Newman <william.newman@airmail.net>

2002-01-06  Sam Steingold  <sds@gnu.org>

	finished the 2001-09-24 (functionp) patch
	* control.d (FUNCTION): use the functionp() macro
	* eval.d (coerce_function): ditto
	* sequence.d (seq_boolop): ditto
	* symbol.d (%PUTD): ditto

2002-01-05  Sam Steingold  <sds@gnu.org>

	SOCKET-STREAM-PEER et al now work for buffered sockets too
	* stream.d (SocketChannel): new macro
	(SOCKET-SERVER, socket_handle, publish_host_data)
	(SOCKET-STREAM-HANDLE): use it
	Reported by Todd Sabin <tas@webspan.net>

2002-01-05  Sam Steingold  <sds@gnu.org>

	* stream.d (BufferedStream_buffer_address): new macro, use it