@@ -1,3 +1,8 @@
+2002-01-07  Sam Steingold  <sds@gnu.org>
+
+	* trace.lisp (fdefinition-local): new function for extracting
+	local (LABELS & FLET) functions
+
 2002-01-06  Sam Steingold  <sds@gnu.org>
 
 	* pathname.d (assure_dir_exists) [WIN32_NATIVE]: fixed a bug
